<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:ems="10"
                android:inputType="textShortMessage">

                <requestFocus />
            </EditText>

            <!-- Status -->

            <TextView
                android:id="@+id/connection_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/connection"
                android:textAppearance="?android:attr/textAppearanceLarge" />


            <Spinner
                android:id="@+id/connection_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/connection_profiles">
            </Spinner>

            <TextView
                android:id="@+id/audio_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/audio"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/audio_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/audio_profiles">
            </Spinner>

            <TextView
                android:id="@+id/activation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/activation"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp">

                <ImageView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/shake_icon"/>
                <ImageView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/updown_icon"/>
                <ImageView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/rotate_left_icon"/>
                <ImageView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/rotate_right_icon"/>


            </LinearLayout>

            <RadioGroup
                android:id="@+id/activation_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Space
                    android:layout_width="15dp"
                    android:layout_height="match_parent" />

                <RadioButton
                    android:id="@+id/shakeRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Shake"/>
                <RadioButton
                    android:id="@+id/upDownRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Up-Down"/>

                <RadioButton
                    android:id="@+id/leftRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Left"/>
                <RadioButton
                    android:id="@+id/rightRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Right"/>

            </RadioGroup>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.12"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/reset"/>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/submit"/>


    </LinearLayout>

</LinearLayout>